# admin-posts-back

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  user-app.session  user-app.session-journal
application/api/: __init__.py  channels.py  posts.py  schedules.py  sources.py  speed_test.py
application/bot_service/: bot.py  posts_service.py  scheduler.py
application/tg_bot/: bot.py
dal_models/: create_db.sql
domain/: __init__.py  base.py  create_db.sql  database.py  db_manager.py
domain/botstorages/: __init__.py  base_model.py  schemas.py
domain/channels/: __init__.py  base_model.py  bl.py  dal.py  schemas.py
domain/images/: __init__.py  base_model.py  schemas.py
domain/keywords/: __init__.py  base_model.py  dal.py  schemas.py
domain/last_news/: __init__.py  base_model.py  dal.py  schemas.py
domain/posts/: __init__.py  base_model.py  bl.py  dal.py  schemas.py
domain/prompts/: __init__.py  base_model.py  schemas.py
domain/schedules/: __init__.py  base_model.py  bl.py  dal.py  schemas.py
domain/source_type/: __init__.py  base_model.py  dal.py  schemas.py
domain/sources/: __init__.py  base_model.py  bl.py  dal.py  schemas.py  user-app.session
domain/sourcetag/: base_model.py  schemas.py
domain/styles/: __init__.py  base_model.py  dal.py  schemas.py
domain/tags/: __init__.py  base_model.py  schemas.py
domain/users/: __init__.py  (+2 more)
test/: RSS_requester.py
utils/: RSS_requester.py  ai_api.py  config.py  connection_db.py  data_state.py  database_manager.py  gigachat_client.py  is_fit_post.py  parse.py  test.py  user-app.session
(+12 files in other folders)
