[project]
name = "admin-posts-back"
version = "0.1.0"
description = ""
authors = [
    {name = "ratmir",email = "ratmir666123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "pytest (>=8.4.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
